# corkscrew

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Corkscrew.code-workspace  PRIVACY.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/hooks/: cross-repo-check.sh  post-compact.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  update-game-stats.yml
.keys/: updater-signing-key.pub
brand-kit/: generate-assets.py  preview.html
docs/: index.html
legacy-python/: __init__.py  bottles.py  config.py  database.py
legacy-python/fomod/: __init__.py
legacy-python/plugins/: __init__.py  skyrim_plugins.py  skyrim_se.py
patches/: wine-cursor-rehide.patch
scripts/: build-latest-json.py  build.sh  rebuild-dmg.sh  release.sh  setup-apple-signing.sh  test-e2e.py  test-llm-e2e.py  test_cursor_fix.py  update-game-stats.py  verify-latest-json.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: vortex_game_registry.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_updates.rs  background_hash.rs  baselines.rs  bottle_config.rs  bottles.rs  cleaner.rs  collection_installer.rs  collections.rs  config.rs  conflict_resolver.rs  crashlog.rs  cursor_clamp.rs  database.rs  deploy_journal.rs  deployer.rs  disk_budget.rs  display_fix.rs  downgrader.rs  download_queue.rs  executables.rs  fomod.rs  fomod_recipes.rs  game_lock.rs  game_registry.rs  games.rs  google_oauth.rs  ini_manager.rs  installer.rs  instruction_parser.rs  instruction_types.rs  instruction_validator.rs  integrity.rs  launcher.rs  lib.rs  llm_chat.rs  llm_parser.rs  loot.rs  loot_rules.rs  main.rs  migrations.rs  (+30 more)
src-tauri/src/plugins/: fallout4.rs  mod.rs  skyrim_plugins.rs  skyrim_se.rs
src/corkscrew/: cli.py  games.py  installer.py  nexus.py
src/corkscrew/fomod/: parser.py
src/lib/: api.ts  bbcode.ts  gamepad.ts  hashingService.ts  installService.ts  speedTracker.ts  stores.ts  theme.ts  types.ts
src/lib/components/: CompatibilityPanel.svelte  ConfirmDialog.svelte  ConflictMap.svelte  ConflictPanel.svelte  DependencyPanel.svelte  DiskBudgetPanel.svelte  EmptyState.svelte  FirstRunWizard.svelte  FomodWizard.svelte  GameIcon.svelte  HelpTooltip.svelte  Icon.svelte  IniManagerPanel.svelte  InstructionParser.svelte  LlmChat.svelte  ModBisect.svelte  ModHealthDashboard.svelte  ModVersionHistory.svelte  ModlistImportWizard.svelte  NexusLogo.svelte  PluginRulesPanel.svelte  PreflightPanel.svelte  RequiredToolsPrompt.svelte  SessionHistoryPanel.svelte  ShaderConversionWizard.svelte  SkeletonRows.svelte  SpotlightSearch.svelte  ThemeToggle.svelte  WabbajackLogo.svelte  WebViewToggle.svelte  WineDiagnosticsPanel.svelte
src/lib/components/mods/: ModBatchBar.svelte  ModCategoryView.svelte  ModContextMenu.svelte  ModDetailPanel.svelte  ModDetailSidebar.svelte  ModFilterBar.svelte  ModTableHeader.svelte  ModTableRow.svelte  NotificationLog.svelte
src/lib/components/topbar/: TopBar.svelte  TopBarGameSelector.svelte  TopBarModlistSelector.svelte  TopBarProfileSelector.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/collections/: +page.svelte
src/routes/collections/progress/: +page.svelte
src/routes/logs/: +page.svelte
src/routes/modlists/: +page.svelte
src/routes/mods/: +page.svelte
src/routes/plugins/: +page.svelte
src/routes/profiles/: +page.svelte
src/routes/settings/: +page.svelte  settings-auth-section.svelte
tools/: generate-icons.sh
