[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corkscrew"
version = "0.1.0"
description = "A macOS-native mod manager for CrossOver/Wine games"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "py7zr>=0.22",
    "rarfile>=4.0",
    "rich>=13.0",
]

[project.scripts]
corkscrew = "corkscrew.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/corkscrew"]
