[package]
name = "corkscrew"
version = "0.5.3"
description = "A mod manager for CrossOver/Wine games on macOS and Linux"
authors = ["cashconway"]
edition = "2021"

[lib]
name = "corkscrew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (for Nexus API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Archive extraction
zip = "2"
sevenz-rust = "0.6"

# XML parsing (FOMOD)
quick-xml = { version = "0.36", features = ["serialize"] }

# File system utilities
walkdir = "2"
dirs = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"

# Futures/streams for downloads
futures = "0.3"

# Window vibrancy (macOS)
window-vibrancy = "0.5"

# Hashing (for version detection)
sha2 = "0.10"

# LOOT integration (plugin sorting + load order)
libloot = "0.29"

# WebSocket (Nexus Mods SSO)
tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
tempfile = "3"
