[package]
name = "corkscrew"
version = "0.9.35"
description = "A mod manager for CrossOver/Wine games on macOS and Linux"
authors = ["cashconway"]
edition = "2021"

[lib]
name = "corkscrew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-liquid-glass = "0.1"
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (for Nexus API)
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Archive extraction
zip = "2"
sevenz-rust2 = "0.20"
unrar = "0.5"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
bzip2 = "0.5"

# XML parsing (FOMOD)
quick-xml = { version = "0.36", features = ["serialize"] }

# File system utilities
walkdir = "2"
dirs = "6"
rayon = "1"
memmap2 = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"

# Futures/streams for downloads
futures = "0.3"

# Window vibrancy (macOS)
window-vibrancy = "0.5"

# Hashing (for version detection)
sha2 = "0.10"

# LOOT integration (plugin sorting + load order)
libloot = "0.29"

# WebSocket (Nexus Mods SSO)
tungstenite = { version = "0.24", features = ["native-tls"] }

# System info (disk space)
libc = "0.2"

# LRU cache (FOMOD parsing)
lru = "0.12"

# Regex (instruction parser)
regex = "1"

# Wabbajack install pipeline
xxhash-rust = { version = "0.8", features = ["xxh64"] }
base64 = "0.22"
mega = "0.8"
scraper = "0.25"
qbsdiff = "1"

# BSA/BA2 archive creation (Bethesda game archives)
ba2 = "3"

# DDS texture transformation
image = "0.25"
ddsfile = "0.5"
image_dds = { version = "0.7", features = ["ddsfile", "image"] }

# PE parsing (SKSE plugin version detection)
pelite = "0.10"

# Embedded JS engine (Vortex extension execution)
rquickjs = { version = "0.10", features = ["futures", "parallel", "loader", "macro", "rust-alloc"] }

# UUID generation (FOMOD correlation IDs)
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
crc32fast = "1.5.0"

[dev-dependencies]
tempfile = "3"
